--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AspEfOMRCRUDDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "LogInContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Web;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AspEfOMRCRUDDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+        "LogInContextConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AspEfOMRCRUDLogInDatabase;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
